--- a/helm/charts/templates/service.yaml
+++ b/helm/charts/templates/service.yaml
@@ -8,7 +8,8 @@ metadata:
   namespace: {{.Values.deployment.application_name}}
 spec:
   ports:
-  - port: 5050
+  - name: http 
+    port: 5050
     protocol: TCP
     targetPort: 5050
   selector:
